--- a/pom.xml
+++ b/pom.xml
@@ -68,11 +68,6 @@
 			<version>1.2</version>
 		</dependency>
 		
-		<dependency>
-			<groupId>taglibs</groupId>
-			<artifactId>standard</artifactId>
-			<version>1.1.2</version>
-		</dependency>
 	
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -157,6 +152,31 @@
 			<version>1.2.2-201002241055</version>
 			<type>nbm</type>
 		</dependency>
+ 		<dependency>
+      		<groupId>xstream.codehaus.org</groupId>
+      		<artifactId>xstream</artifactId>
+      		<version>1.4.4</version>
+ 		</dependency>
+ 		<dependency>
+      		<groupId>xstream.codehaus.org</groupId>
+      		<artifactId>xmlpull</artifactId>
+      		<version>1.1.3.1</version>
+ 		</dependency> 				
+ 		<dependency>
+ 			<groupId>org.apache.directory.studio</groupId>
+ 			<artifactId>org.dom4j.dom4j</artifactId>
+ 			<version>1.6.1</version>
+ 		</dependency>
+ 		<dependency>
+ 			<groupId>jaxen</groupId>
+ 			<artifactId>jaxen</artifactId>
+ 			<version>1.1.4</version>
+ 		</dependency>
+ 		<dependency>
+ 			<groupId>jdom</groupId>
+ 			<artifactId>jdom</artifactId>
+ 			<version>1.1</version>
+ 		</dependency>
 </dependencies>
 	<build>
 		<plugins>
