--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
     <!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 	    <param-name>webAppRootKey</param-name>
-	    <param-value>/infoshop</param-value>
+	    <param-value>/</param-value>
 	</context-param>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
